--- a/website/app/templates/base.html
+++ b/website/app/templates/base.html
@@ -35,9 +35,11 @@
                 {% endfor %}
             </ul>
         </div>
-        <div class="content">
-            {% block content %}
-            {% endblock %}
+        <div class="container">
+            <div class="content">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
     </body>
 </html>
