--- a/src/website/app/static/css/custom.css
+++ b/src/website/app/static/css/custom.css
@@ -1,5 +1,6 @@
 .content {
     padding: 0px 0px;
+   
 }
 
 .container{
@@ -8,8 +9,9 @@
 }
 
 .footer {
-    padding-bottom: 10px;
+    padding: 0px;
     bottom: 0;
+    margin-bottom: 0;
     position: absolute;
 }
 
