--- a/src/website/app/templates/index.html
+++ b/src/website/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% if current_user.is_authenticated %}
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-2 rounded">
                 <div class="container-fluid">
                 <nav class="hidden-xs-down bg-faded sidebar">
                     <ul class="nav nav-pills nav-stacked flex-column">
@@ -11,6 +11,7 @@
                         <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">View Calendar &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-warning btn-block" href="#" role="button">Update from Canvas &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-primary btn-block" href="#" role="button">Send Reminders &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-sample btn-block" href="#" role="button">Sleep Schedule &raquo;</a></p></li>
                     </ul>
                 </nav>
                 </div>
