--- a/src/website/app/templates/index.html
+++ b/src/website/app/templates/index.html
@@ -6,7 +6,7 @@
                 <div class="container-fluid">
                 <nav class="hidden-xs-down bg-faded sidebar">
                     <ul class="nav nav-pills nav-stacked flex-column">
-                        <li class="nav-item"><p><a class="btn btn-success btn-block" href="#" role="button">Add Event &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-success btn-block" href="{{ url_for('add_selector') }}" role="button">Add Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-danger btn-block" href="#" role="button">Delete Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">View Calendar &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-warning btn-block" href="#" role="button">Update from Canvas &raquo;</a></p></li>
