hopefully fixed user login???

--- a/src/website/app/templates/index.html
+++ b/src/website/app/templates/index.html
@@ -8,7 +8,7 @@
                     <ul class="nav nav-pills nav-stacked flex-column">
                         <li class="nav-item"><p><a class="btn btn-success btn-block" href="{{ url_for('add_selector') }}" role="button">Add Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-danger btn-block" href="#" role="button">Delete Event &raquo;</a></p></li>
-                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">View Calendar &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">Edit Queue &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-warning btn-block" href="#" role="button">Update from Canvas &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-primary btn-block" href="#" role="button">Send Reminders &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-sample btn-block" href="#" role="button">Sleep Schedule &raquo;</a></p></li>
