--- a/src/website/app/templates/todolist.html
+++ b/src/website/app/templates/todolist.html
@@ -19,8 +19,8 @@
             <td class="col-sm-1 text-danger">{{ e.end.replace(microsecond=0).replace(second=0) }}</td>
             <td class="col-sm-4">{{ e.name }}</td>
             <td class="col-sm-4">{{ e.extra_info }}</td>
-            <td class="col-sm-1"><a href="#" class="btn-sm btn btn-primary" data-toggle="modal" data-target="#view" role="button">View</a></td>
-            <td class="col-sm-1"><a href="#" class="btn-sm btn btn-info" data-toggle="modal" data-target="#edit" role="button">Edit</a></td>
+            <td class="col-sm-1"><a href="{{ url_for('view_event', id=e.id) }}" class="btn-sm btn btn-primary" role="button">View</a></td>
+            <td class="col-sm-1"><a href="{{ url_for('edit_event', id=e.id) }}" class="btn-sm btn btn-info" role="button">Edit</a></td>
         </tr> 
         {% endfor %}
     </tbody>
