--- a/src/website/app/templates/todolist.html
+++ b/src/website/app/templates/todolist.html
@@ -7,7 +7,8 @@
         <th class="table-success">Start</th>
         <th class="table-danger" >End</th>
         <th class="table-primary"   >Name</th>
-        <th class="table-secondary"   >Details</th>
+        <th class="table-info"   >Type</th>
+        <th class="table-secondary"   >Description</th>
         <th class="table-primary"   ></th>
         <th class="table-danger"   ></th>
     </thead>
@@ -17,8 +18,9 @@
         <tr>
             <td class="col-sm-1 text-success">{{ e.start.replace(microsecond=0).replace(second=0) }}</td>
             <td class="col-sm-1 text-danger">{{ e.end.replace(microsecond=0).replace(second=0) }}</td>
-            <td class="col-sm-4">{{ e.name }}</td>
-            <td class="col-sm-4">{{ e.extra_info }}</td>
+            <td class="col-sm-2">{{ e.name }}</td>
+            <td class="col-sm-2">{{ e.extra_info }}</td>
+            <td class="col-sm-4">{{ e.desc }}</td>
             <td class="col-sm-1"><a href="{{ url_for('edit_schedule_event', id=e.id) }}" class="btn-sm btn btn-info" role="button">Edit</a></td>
             <td class="col-sm-1"><a href="{{ url_for('delete_schedule_event', id=e.id) }}" class="btn-sm btn btn-danger" role="button">Delete</a></td>
         </tr> 
