--- a/src/website/app/templates/index.html
+++ b/src/website/app/templates/index.html
@@ -6,13 +6,16 @@
                 <div class="container-fluid">
                 <nav class="hidden-xs-down bg-faded sidebar">
                     <ul class="nav nav-pills nav-stacked flex-column">
+                        <li class="nav-item"><p><a class="btn btn-lg btn-danger btn-block" href="{{ url_for('update_schedule') }}" role="button">Update Schedule</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-success btn-block" href="{{ url_for('add_event', event_type='regular') }}" role="button">Add Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-primary btn-block" href="{{ url_for('add_event', event_type='recurring') }}" role="button">Add Recurring Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-primary btn-block" href="{{ url_for('add_event', event_type='task') }}" role="button">Add Task Event &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-sample btn-block" href="{{ url_for('add_event', event_type='sleep') }}" role="button">Sleep Schedule &raquo;</a></p></li>   
-                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">Edit Queue &raquo;</a></p></li>
-                        <li class="nav-item"><p><a class="btn btn-danger btn-block" href="{{ url_for('update_schedule') }}" role="button">Update Schedule &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="{{ url_for('edit_queue') }} " role="button">Edit Queue &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-warning btn-block" href="#" role="button">Edit Global Region &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-secondary btn-block" href="#" role="button">Send Reminders &raquo;</a></p></li>
+                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">HELP &raquo;</a></p></li>
+                        
 
                     </ul>
                 </nav>
