--- a/project/templates/add_event.html
+++ b/project/templates/add_event.html
@@ -8,8 +8,10 @@
         <table>
             {% for field in form %}
             <tr>
+                {% if field.name != "csrf_token" %}
                 <td>{{ field.name }}</td>
                 <td>{{ field() }}</td>
+                {% endif %}
                 {% for error in field.errors %}
                 <td>
                     <span style="color: red;">[{{ error }}]</span>
