--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -19,9 +19,13 @@
                 <a class='nav-link' href="{{ url_for('index') }}">home</a>
                 {% if current_user.is_authenticated %}
                 <a class='nav-link' href="{{ url_for('edit') }}">settings</a>
-                <a class='nav-link' href="{{ url_for('logout') }}">logout</a>
+                {% endif %}
+                <a class='nav-link' href="https://gitreports.com/issue/ika-musuko/tma/">bugs</a>
+                <a class='nav-link' href="{{ url_for('help') }}"><span class="text-warning">help</span></a>
+                {% if current_user.is_authenticated %}
+                <a class='nav-link' href="{{ url_for('logout') }}"><span class="text-danger">logout</span></a>
                 {% else %}
-                <a class='nav-link' href="{{ url_for('login') }}">login</a>
+                <a class='nav-link' href="{{ url_for('login') }}"><span class="text-success">login</span></a>
                 {% endif %}
             </nav>
         <hr>
