--- a/project/templates/edit_queue.html
+++ b/project/templates/edit_queue.html
@@ -1,69 +1,68 @@
 {% extends 'base.html' %}
 {% block content %}
+<h1>Event Queue Editor</h1>
 {% if event_queue.items|length < 1 %}
 <p>Nothing on the queue!</p>
 {% else %}
+<center>
+    <div>
+        {% if event_queue.has_prev %}
+            <a class=" btn btn-danger btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.prev_num) }}">↑ higher events ↑</a>
+        {% else %}
+        <div>top of the event queue</div>
+        {% endif %}
+    </div>  
+    <div>
+        {% if event_queue.has_next %}
+            <a class="btn btn-primary btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.next_num) }}">↓ lower events ↓</a>
+        {% else %}
+            <div>bottom of the event queue</div>
+        {% endif %}
+    </div>
 <table class="table table-striped table-bordered">
     <thead>
-        <th class="table-primary"   >Name</th>
-        <th class="table-warning"   >Description</th>
-        <th class="table-info">Type</th>
-        <th class="table-secondary">Extra</th>
+        <th class="col-sm-2 table-secondary"   >ID</th>
+        <th class="table-success"   >Name</th>
+        <th class="table-primary"   >Description</th>
+        <th class="table-info"      >Type</th>
+        <th class="table-warning"   ></th>
+        <th class="table-danger"   ></th>
+{#         <th class="table-secondary">Extra</th> #}
     </thead>
-    <center>
-        <div class="row">
-           
-            <div class="col-sm">
-                {% if event_queue.has_prev %}
-                    <a class=" btn btn-danger btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.prev_num) }}">&lt;&lt; higher events</a>
-                {% else %}
-                <div>top of the event queue</div>
-                {% endif %}
-            </div>  
-            <div class="col-sm">
-                {% if event_queue.has_next %}
-                    <a class="btn btn-primary btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.next_num) }}">travel to the future &gt;&gt;</a>
-                {% else %}
-                    <div>bottom of the event queue</div>
-                {% endif %}
-            </div>
-        </div>
-    </center>
+
+
     
-    <tbody data-link="row" class="rowlink">
-        {% for e, f in zip(event_queue, event_forms) %}
+    <tbody data-link="row">
+        {% for e in event_queue.items %}
         <tr>
-            {% if e.type != "SleepEvent" %}
-            <td class="col">{{ f.name }}</td>
-            <td class="col">{{ f.desc }}</td>
-            {% else %}
-            <td class="col">SLEEP</td>
-            <td class="col">SLEEP</td>
-            {% endif %}
+            <td class="col-sm-2">{{ e.id }}</td>
+            <td class="col">{{ e.name }}</td>
+            <td class="col">{{ e.desc }}</td>
             <td class="col">{{ e.type }}</td>
-            {% if e.type == "Event" %}
-            <td class="col">{{ f.start }}</td>
-            <td class="col">{{ f.end }}</td>
-            {% elif e.type == "RecurringEvent" %}
-            <td class="col">period start: {{ f.period_start }}</td>
-            <td class="col">period end: {{ f.period_end }}</td>
-            <td class="col">start time: {{ f.start_time }}</td>
-            <td class="col">end time: {{ f.end_time }}</td>
-            <td class="col">days of the week: {{ f.days }}</td>
-            {% elif e.type == "SleepEvent" %}
-            <td class="col">sleep: {{ f.sleep }}</td>
-            <td class="col">wake: {{ f.wake }}</td>
+            <td class="col-sm"><a href="{{ url_for('edit_event', id=e.id) }}" class="btn btn-sm btn-warning" role="button">Edit</a></td>
+            <td class="col-sm"><a href="{{ url_for('delete_event', id=e.id) }}" class="btn btn-sm btn-danger" role="button">Delete</a></td>
+{#            {% if e.type == "Event" %}
+            <td class="col">{{ e.start }}</td>
+            <td class="col">{{ e.end }}</td>
+            {% elif e.type == "RecurringEvent" or e.type == "SleepEvent" %}
+            <td class="col">period start: {{ e.recEvent_period_start }}</td>
+            <td class="col">period end: {{ e.recEvent_period_end }}</td>
+            <td class="col">start time: {{ e.recEvent_start_time }}</td>
+            <td class="col">end time: {{ e.recEvent_end_time }}</td>
+            <td class="col">days of the week: {{ e.recEvent_daystr }}</td>
             {% elif e.type == "TaskEvent" or e.type == "DueEvent" %} 
-            <td class="col">duration: {{ f.duration }} minutes</td>
+            <td class="col">duration: {{ e.taskEvent_duration }} minutes</td>
             {% if e.type == "DueEvent" %}
-            <td class="col">due date: {{ f.due }}</td>     
+            <td class="col">due date: {{ dueEvent_due }}</td>     
             {% endif %}
-            {% endif %}
+            {% endif %} #}
         </tr> 
         {% endfor %}
     </tbody>
 </table>
 
+</center>
+
 {% endif %}
-<a class="btn btn-primary btn-space" role="button" href="{{ url_for('index') }}">Back</a>
+<a class="btn btn-primary btn-space" role="button" href="{{ url_for('index') }}">←Back</a>
 {% endblock %}
