--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -14,9 +14,6 @@
                         <li class="nav-item"><p><a class="btn btn-info btn-block" href="{{ url_for('edit_queue') }} " role="button">Edit Queue &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-warning btn-block" href="#" role="button">Edit Global Region &raquo;</a></p></li>
                         <li class="nav-item"><p><a class="btn btn-secondary btn-block" href="#" role="button">Send Reminders &raquo;</a></p></li>
-                        <li class="nav-item"><p><a class="btn btn-info btn-block" href="#" role="button">HELP &raquo;</a></p></li>
-                        
-
                     </ul>
                 </nav>
                 </div>
@@ -54,7 +51,7 @@
         <div class='jumbotron'>
             <h1 class="display-3">Welcome to your new Time Management Assistant.</h2>
             <p>Login with Google</p>
-            <p><a class="btn btn-primary btn-lg" href="{{ url_for('login') }}">login &raquo;</a></p>
+            <p><a class="btn btn-success btn-lg" href="{{ url_for('login') }}">login &raquo;</a></p>
         </div>  
     {% endif %}
 
