--- a/project/templates/help.html
+++ b/project/templates/help.html
@@ -5,4 +5,6 @@
 <h6><b>Sleep Schedule: </b>Update your sleep schedule.</h6>
 <h6><b>Recurring Event: </b>Events that happen every week on specific days at certain times. (examples: classes, work)</h6>
 <h6><b>Task Event: </b>Things that have to be done, possibly by a certain date, automatically scheduled (examples: homework, personal projects)</h6>
+<hr/>
+<h6>If you would like to request more information on this help page, please submit a bug above with the title in the following format: "Help Page Suggestion: [your suggestion here]"</h6>
 {% endblock %}
