--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -15,7 +15,7 @@
                         <hr/>
                         <a class="btn btn-info btn-block" href="{{ url_for('edit_queue') }} " role="button">Edit Queue &raquo;</a></p>
 {#                      <a class="btn btn-warning btn-block" href="#" role="button">Edit Global Region &raquo;</a></p> #}
-                        <a class="btn btn-secondary btn-block" href="#" role="button">Send Reminders &raquo;</a></p>
+                        <a class="btn btn-secondary btn-block" href="{{ url_for('send_reminders') }}" role="button">Send Reminders &raquo;</a></p>
                     </div>
                 </nav>
                 </div>
