--- a/project/templates/add_event.html
+++ b/project/templates/add_event.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Add a {{ event_type.title() }} Event</h1>
+<p>IMPORTANT: datetime format is YYYY-MM-DD HH:MM:SS</p>
 <form action="" method="post" name="edit" class="editform">
     {{form.hidden_tag()}}
     <div class="row">
