--- a/project/templates/edit_queue.html
+++ b/project/templates/edit_queue.html
@@ -1,28 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Event Queue Editor</h1>
+    <div class="row">
+        <div class='col-sm'> 
+            <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('edit_queue') }}">All Events</a>
+        </div>
+        <div class='col-sm'>
+            <a class="btn btn-success btn-sm" role="button" href="{{ url_for('edit_queue', filt='Event') }}">User Events</a>
+        </div>
+        <div class='col-sm'>
+            <a class="btn btn-primary btn-sm" role="button" href="{{ url_for('edit_queue', filt='RecurringEvent') }}">RecurringEvents</a>
+        </div>
+        <div class='col-sm'>
+            <a class="btn btn-primary btn-sm" role="button" href="{{ url_for('edit_queue', filt='TaskEvent') }}">TaskEvents</a>
+        </div>
+        <div class='col-sm'>
+            <a class="btn btn-warning btn-sm" role="button" href="{{ url_for('edit_queue', filt='DueEvent') }}">DueEvents</a>
+        </div>
+        <div class='col-sm'>
+            <a class="btn btn-sample btn-sm" role="button" href="{{ url_for('edit_queue', filt='SleepEvent') }}">SleepEvents</a>
+        </div>
+    </div>
 {% if event_queue.items|length < 1 %}
 <p>Nothing on the queue!</p>
 {% else %}
 <center>
-    {#<div class="row">
-        <a class="btn btn-success btn-sm" role="button" href="{{ url_for('edit_queue', filt='
-
-
-
-
-
-    </div> #}
     <div>
         {% if event_queue.has_prev %}
-            <a class=" btn btn-danger btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.prev_num) }}">↑ higher events ↑</a>
+            <a class=" btn btn-danger btn-space btn-block" role="button" href="{{ url_for('edit_queue', filt=filt, page=event_queue.prev_num) }}">↑ higher events ↑</a>
         {% else %}
         <div>top of the event queue</div>
         {% endif %}
     </div>  
     <div>
         {% if event_queue.has_next %}
-            <a class="btn btn-primary btn-space btn-block" role="button" href="{{ url_for('edit_queue', page=event_queue.next_num) }}">↓ lower events ↓</a>
+            <a class="btn btn-primary btn-space btn-block" role="button" href="{{ url_for('edit_queue', filt=filt, page=event_queue.next_num) }}">↓ lower events ↓</a>
         {% else %}
             <div>bottom of the event queue</div>
         {% endif %}
